@@ -1,3 +1,15 @@
+2010-09-17  Jia Pu  <jpu@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        WebKit should use system wide spell checking preference when application specific one isn't set.
+        https://bugs.webkit.org/show_bug.cgi?id=45789
+        <rdar://problem/8416041>
+
+        * WebView/WebView.mm:
+        (+[WebView initialize]): Use system wide autocorrection and text substitution preferences
+          when the application level preferences are not set.
+
 2010-09-16  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Darin Adler.
